--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
     background-color: black;
     margin-left: 10%;
     margin: 8%;
-    background-image: url("css3.jpg");
+    background-image: url("https://www.todoespacoonline.com/w/wp-content/uploads/2014/08/css3-logo.jpg");
     background-size: cover;
     background-position: center;
 }
