--- a/style.css
+++ b/style.css
@@ -1,3 +1,80 @@
-body{
-    background-color: blueviolet;
+*{
+    box-sizing: border-box;
+    margin: 0;
+}
+
+header{
+    width: 100%;
+    height: 220px;
+    border: 5px solid black;
+}
+
+main{
+    margin-top: 20px;
+    height: 800px;
+    width: 68%;
+    border: 5px solid black;
+    float: left;
+}
+
+main .Destaques{
+    width: 100%;
+    height: 35%;
+    border: 5px solid black;
+}
+
+main .Caixas{
+    width: 100%;
+    margin-top: 2%;
+    height: 63%;
+    border: 5px solid black;
+}
+
+main .Caixa1{
+    width: 49%;
+    height: 100%;
+    border: 5px solid black;
+    margin-right: 1%;
+    float: left;
+}
+
+main .Caixa2{
+    width: 49%;
+    height: 100%;
+    border: 5px solid black;
+    margin-left: 1%;
+    float: right;
+}
+aside{
+    margin-top: 20px;
+    margin-left: 2%;
+    height: 800px;
+    width: 30%;
+    border: 5px solid black;
+    display: inline-block;
+}
+
+aside .CaixaBusca{
+    width: 100%;
+    height: 10%;
+    border: 5px solid black;
+}
+
+aside .MaisLidos{
+    width: 100%;
+    height: 40%;
+    border: 5px solid black;
+}
+
+aside .Galeria{
+    width: 100%;
+    height: 50%;
+    border: 5px solid black;
+}
+
+footer{
+    margin-top: 20px;
+    width: 100%;
+    height: 100px;
+    border: 5px solid black;
 }
