--- a/style.css
+++ b/style.css
@@ -75,6 +75,14 @@ aside .Galeria{
 footer{
     margin-top: 20px;
     width: 100%;
-    height: 100px;
+    height: 35px;
+    background-color: rgb(78, 78, 78);
     border: 5px solid black;
+}
+
+footer p{
+    position: relative;
+    left: 5px;
+    top: 4px;
+    color: white;
 }
