--- a/style.css
+++ b/style.css
@@ -1,21 +1,11 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-}
-
-header{
-    width: 100%;
-    height: 180px;
-}
-
 header .Cabeçalho{
     background-color: aquamarine;
-    height: 140px;
+    height: 75%;
     width: 100%;
 }
 
 header .Links{
-    height: 40px;
+    height: 25%;
     width: 100%;
     background-color: aquamarine;
     border-top: 5px solid black;
