--- a/style.css
+++ b/style.css
@@ -13,6 +13,6 @@ aside .CaixaBusca .Busca{
 aside .CaixaBusca .Busca input{
     width: 100%;
     height: 100%;
-    font-size: large;
-
+    font-size: medium;
+    text-align: center;
 }
