--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ button{
 }
 
 aside .MaisLidos{
+    background-color: grey;
     width: 100%;
     height: 41.75%;
     border: 5px solid black;
@@ -218,15 +219,10 @@ li{
 h1{
     background-color: rgb(30, 30, 30);
     color: white;
-    margin-left: 15px;
-    margin-right: 10px;
-}
-ul{
-    background-color: white;
-    width: 200px;
+    margin-left: 10px;
 }
 li{
-    margin-left: 28px;
+    margin-left: 5px;
     background-color: white;
     width: 290px;
     font-family: Arial, Helvetica, sans-serif;
@@ -239,8 +235,11 @@ h2{
     margin-left: 10px;
 }
 ul{
-    margin-top: 15px;
-    margin-left: -30px;
+    background-color: white;
+    margin-top: 0px;
+    width: 300%;
+    height: 270px;
+    margin-left: 10px;
     list-style: none;
 }
 ul li:before{
@@ -249,6 +248,7 @@ ul li:before{
     color: black;
 }
 li{
-    color: rgb(243, 243, 243);
-    margin-top: 7px;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    margin-left: -30px;
 }
