--- a/style.css
+++ b/style.css
@@ -44,9 +44,9 @@ a{
 
 a:hover{
     text-decoration: underline;
-    color: blue;
+    color: rgb(0, 225, 255);
     border: 1px solid black;
-    border-radius: 40%;
+    word-spacing: 2px;
     background-color: white;
 }
 
@@ -114,7 +114,7 @@ main .Destaques{
 
 .botaolm3{
     top: 2px;
-    left: 55px;
+    left: 150px;
     position: relative;
 }
 
@@ -375,6 +375,16 @@ ul{
     margin-left: -30px;
     list-style: none;
 }
+
+ul li{
+    background-color: grey;
+    position: relative;
+    top: 20px;
+    right: 50px;
+    width: 100%;
+    height: 30px;
+}
+
 ul li:before{
     content: '\2022';
     margin: 07px;
@@ -445,18 +455,12 @@ li{
     list-style: none;
 }
 
-ul li:before{
-    content: '\2022';
-    margin: 07px;
-    color: black;
-}
-
 li{
     color: white;
     background-color: grey;
     color: rgb(0, 0, 0);
     margin-right: 50px;
     position: relative;
-    right: 35px;
+    right: 30px;
     top: 50px;
 }
